fixed some overflows

--- a/src/sass/components/_container.sass
+++ b/src/sass/components/_container.sass
@@ -5,6 +5,7 @@
     flex-direction: column
     justify-content: center
     min-height: 100vh
+    overflow: hidden
 
     width: 100%
     max-width: 1440px
