--- a/src/sass/components/_social.sass
+++ b/src/sass/components/_social.sass
@@ -8,7 +8,7 @@
     font-family: $familyMono
 
     .socialList__item
-        display: inline
+        display: inline-block
         margin: 0 1rem 0 0
         color: $black
         line-height: 2rem
